--- a/apps/calculator-app/src/app/app.component.html
+++ b/apps/calculator-app/src/app/app.component.html
@@ -1,9 +1,8 @@
 <div style="text-align: center">
   <h1>Welcome to calculator-app!</h1>
-  <img
-    width="450"
-    src="https://raw.githubusercontent.com/nrwl/nx/master/images/nx-logo.png"
-    alt="Nx - Smart, Fast and Extensible Build System"
-  />
+
 </div>
 <div>Message: {{ hello$ | async | json }}</div>
+<!-- <div>Tax: {{ tax$ | async  }}</div>  -->
+
+<ends-shop [products]="products$ | async"></ends-shop>
