--- a/apps/calculator-app/src/app/app.component.html
+++ b/apps/calculator-app/src/app/app.component.html
@@ -1,8 +1,21 @@
-<div style="text-align: center">
-  <h1>Welcome to calculator-app!</h1>
 
-</div>
-<div>Message: {{ hello$ | async | json }}</div>
+<p>
+<mat-toolbar color="primary">
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <mat-icon>menu</mat-icon>
+  </button>
+  <span>ENDS calculator</span>
+  <span class="example-spacer"></span>
+  <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+    <mat-icon>share</mat-icon>
+  </button>
+</mat-toolbar>
+</p>
+<!-- <div>Message: {{ hello$ | async | json }}</div>
 <!-- <div>Tax: {{ tax$ | async  }}</div>  -->
 
-<ends-shop [products]="products$ | async"></ends-shop>
+<ends-shop [products]="products$ | async"></ends-shop> -->
+
