--- a/apps/calculator-app/src/app/app.component.html
+++ b/apps/calculator-app/src/app/app.component.html
@@ -4,6 +4,7 @@
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
     <mat-icon>menu</mat-icon>
   </button>
+
   <span>ENDS calculator</span>
   <span class="example-spacer"></span>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
@@ -15,7 +16,8 @@
 </mat-toolbar>
 </p>
 <!-- <div>Message: {{ hello$ | async | json }}</div>
-<!-- <div>Tax: {{ tax$ | async  }}</div>  -->
+ <div>Tax: {{ tax$ | async  }}</div>
 
 <ends-shop [products]="products$ | async"></ends-shop> -->
-
+<ends-product-detail></ends-product-detail>
+<ends-products></ends-products>
