--- a/apps/calculator-app/src/app/products/products.component.html
+++ b/apps/calculator-app/src/app/products/products.component.html
@@ -11,6 +11,11 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Product Name</th>
       <td mat-cell *matCellDef="let row">{{row.name}}</td>
     </ng-container>
+      <!-- Wholesale price Column -->
+      <ng-container matColumnDef="wholePrice">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Wholesale Price</th>
+        <td mat-cell *matCellDef="let row">{{row.wholeSalePrice}}</td>
+      </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
