--- a/apps/calculator-app/src/app/products/products.component.html
+++ b/apps/calculator-app/src/app/products/products.component.html
@@ -1,31 +1,42 @@
-<div class="mat-elevation-z8" >
+<div class="mat-elevation-z8">
   <table mat-table class="full-width-table" matSort aria-label="Elements">
     <!-- Id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Product Id(SKU)</th>
-      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Product Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
     </ng-container>
-      <!-- Wholesale price Column -->
-      <ng-container matColumnDef="wholeSalePrice">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Wholesale Price</th>
-        <td mat-cell *matCellDef="let row">{{row.wholeSalePrice}}</td>
-      </ng-container>
-
+    <!-- Price Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Price</th>
+      <td mat-cell *matCellDef="let row">{{ row.price }}</td>
+    </ng-container>
+    <!-- Wholesale price Column -->
+    <ng-container matColumnDef="wholesalePrice">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Wholesale Price</th>
+      <td mat-cell *matCellDef="let row">{{ row.wholesalePrice }}</td>
+    </ng-container>
+    <!-- Quantity Column -->
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</th>
+      <td mat-cell *matCellDef="let row">{{ row.quantity }}</td>
+    </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
-  <mat-paginator #paginator
-      [length]="length$ | async"
-      [pageIndex]="0"
-      [pageSize]="10"
-      [pageSizeOptions]="[5, 10, 20]"
-      aria-label="Select page">
+  <mat-paginator
+    #paginator
+    [length]="length$ | async"
+    [pageIndex]="0"
+    [pageSize]="10"
+    [pageSizeOptions]="[5, 10, 20]"
+    aria-label="Select page"
+  >
   </mat-paginator>
 </div>
